@@ -1,3 +1,7 @@
+2013-06-04  Cedric Bail
+
+	* Evas: correctly detect if loader support asynchronous preloading.
+
 2013-06-03  Ederson Desouza
 
         * Add -1.0 value to text ellipsis -- for not ellipsizing it at all.
